# AlgorithmEAjks

./: .dockerignore  .gitignore  .gitmodules  README.md
Code/Algorithms/AlgorithmEAjks/: README.md  pyproject.toml  tox.ini
Code/Algorithms/AlgorithmEAjks/tests/: algorithm.py
DevOps/Docker/AlgorithmEAjks/: CHANGELOG.md  README.md
DevOps/Docker/AlgorithmEAjks/v1/Ubuntu-22.04/: Dockerfile  README.md
DevOps/Docker/Python-AlgorithmEAjks/: CHANGELOG.md  README.md
DevOps/Docker/Python-AlgorithmEAjks/v1/Ubuntu-22.04/: Dockerfile  README.md
Resources/DataSets/Yahoo Finance/: Symbols-XPAR-B.csv  Symbols-XPAR-C.csv
Resources/DataSets/Yahoo Finance/Daily/: AAA.PA.csv  AAC.PA.csv  AB.PA.csv  ABCA.PA.csv  ABNX.PA.csv  ACA.PA.csv  ACAN.PA.csv  ADOC.PA.csv  AIR.PA.csv  AKW.PA.csv  ALD.PA.csv  ALDV.PA.csv  ALO.PA.csv  ALTA.PA.csv  AM.PA.csv  ANTIN.PA.csv  ARAMI.PA.csv  AREIT.PA.csv  ARTE.PA.csv  ARTO.PA.csv  ATO.PA.csv  AUB.PA.csv  AUGR.PA.csv  AURE.PA.csv  AURS.PA.csv  BASS.PA.csv  BB.PA.csv  BEN.PA.csv  BERR.PA.csv  BIG.PA.csv  BLC.PA.csv  BN.PA.csv  BNP.PA.csv  BOI.PA.csv  BOL.PA.csv  BON.PA.csv  BUR.PA.csv  CA.PA.csv  CAF.PA.csv  CAP.PA.csv  (+175 more)
Resources/DataSets/YahooFinance/: Symbols-XPAR-A.csv
Resources/DataSets/YahooFinance/Daily/: ABEO.PA.csv  ABLD.PA.csv  ABVX.PA.csv  AC.PA.csv  ADP.PA.csv  ADUX.PA.csv  AELIS.PA.csv  AF.PA.csv  AFME.PA.csv  AI.PA.csv  AKE.PA.csv  AKOM.PA.csv  ALTUR.PA.csv  AMPLI.PA.csv  AMUN.PA.csv  APM.PA.csv  ARG.PA.csv  ASY.PA.csv  ATE.PA.csv  ATEME.PA.csv  ATLD.PA.csv  AVT.PA.csv  AXW.PA.csv  BAIN.PA.csv  BALYO.PA.csv  BIM.PA.csv  BLEE.PA.csv  BLV.PA.csv  BSD.PA.csv  BUI.PA.csv  BVI.PA.csv  CAFO.PA.csv  CBDG.PA.csv  CCN.PA.csv  CDA.PA.csv  CEN.PA.csv  CFI.PA.csv  CGG.PA.csv  CHSR.PA.csv  CIV.PA.csv  (+143 more)
