#   Copyright (C) 2020-2023 Andrea and Eric DELAGE <Contact@by-EAjks.Com>
#   See the file "LICENSE" for the full license governing this code.

[project]
name = "algorithmeajks"
version = "0.0.1"
description = "Algorithms by EAjks"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = []
authors = [
    { name = "Andrea DELAGE", email = "Contact@by-EAjks.Com" },
    { name = "Eric DELAGE", email = "Contact@by-EAjks.Com" },
]
maintainers = [
    { name = "Andrea DELAGE", email = "Contact@by-EAjks.Com" },
    { name = "Eric DELAGE", email = "Contact@by-EAjks.Com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.2,<3",
    "numba>=0.56.4",
    "yfinance>=0.2.12",
]

[project.optional-dependencies]
dev = [
    "check-manifest>=0.49",
]
test = [
    "coverage>=7.2.0,<8",
]

[project.urls]
"Homepage" = "https://gitlab.by-eajks.com/by-eajks.com/value-propositions/algorithmeajks"
"Bug Tracker" = "https://gitlab.by-eajks.com/by-eajks.com/value-propositions/algorithmeajks/-/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "https://saythanks.io/to/EajksEajks"
"Source" = "https://gitlab.by-eajks.com/by-eajks.com/value-propositions/algorithmeajks"

[project.scripts]
algorithmeajks-cli = "algorithmeajks:main"

[tool.setuptools]
include-package-data = false
package-data = { "sample" = ["*.dat"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["algorithmeajks*"]
exclude = ["algorithmeajks-tests*"]
namespaces = false

[build-system]
requires = [
    "setuptools>=67.4.0,<68",
    "wheel>=0.38.4",
]
build-backend = "setuptools.build_meta"
